<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:rowCount="12"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="false" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:background="#0099CC"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_height="36dp"
            android:layout_columnSpan="4"
            android:ems="20"
            android:gravity="center_horizontal|center_vertical" />

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lname"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="231dp"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:ems="20"
            android:inputType="text"
            android:minEms="3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/laddress" />
        <EditText
            android:id="@+id/editText_address"
            android:layout_columnSpan="3"
            android:ems="10"
            android:inputType="textPostalAddress|textCapCharacters" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lcity" />
        <EditText
            android:id="@+id/editText_city"
            android:layout_columnSpan="3"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lstate" />
        <EditText
            android:id="@+id/editText_state"
            android:layout_width="96dp"
            android:layout_columnSpan="1"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_columnSpan="1"
            android:text="@string/lzip" />

        <EditText
            android:id="@+id/editText_zip"
            android:layout_width="79dp"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:ems="5"
            android:maxLength="5"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView5"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lemail" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_columnSpan="3"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView6"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lphone" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_columnSpan="3"
            android:ems="10"
            android:inputType="phone|textAutoCorrect"
            android:maxLength="10" />

        <TextView
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_columnSpan="1"
             android:maxLength="10"
            android:text="@string/ldate" />

        <EditText
            android:id="@+id/editText_date"
            android:layout_width="118dp"
            android:layout_columnSpan="1"
            android:ems="5"
            android:maxLength="10"
            android:inputType="date|text" />

        <TextView
            android:id="@+id/textView8"
            android:layout_columnSpan="1"
            android:text="@string/ltime" />

        <EditText
            android:id="@+id/editText_time"
            android:layout_columnSpan="1"
            android:ems="5"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView9"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/lprice" />

        <EditText
            android:id="@+id/editText_price"
            android:layout_columnSpan="3"
            android:ems="8"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView10"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/linfo" />

        <EditText
            android:id="@+id/editText_info"
            android:layout_columnSpan="3"
            android:ems="10" />

        <Button
            android:id="@+id/button2"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="left|center_vertical"
            android:layout_row="11"
            android:text="Cancel"
            android:onClick="CancelOnClick"  />

        <Button
            android:id="@+id/button1"
            android:layout_column="1"
            android:layout_gravity="left|center_vertical"
            android:layout_row="11"
            android:text="Save"
            android:onClick="SaveOnClick" />

    </GridLayout>

</ScrollView>
